  who appear will be in domain parseMsg_presence instead of
  parseMsg_presence/player (useful for beepDomains).
- dcOnEmpty option for useSelf_item block will disconnect if it tries
  to use that item but ran out.
- storageAuto_useChatCommand (command)
  Use a specified chat command to open the storage instead of going
  to talk to the kafra.

New control files:
- control/sys.txt
  This file stores options that can only be loaded once (so this file
  cannot be reloaded). You can get a default version of this file
  from the default configuration files archive.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.
- There's now a %sys (in package Settings) variable for options in
  control/sys.txt
- Most modules are now autoloadable (see perldoc SelfLoader).
- Optimizations in the %portals_lut data structure. This saves about
  700 KB of memory.
- New "b<item#>,<quantity>" NPC talk sequence, only useful to macro writers
  who use the 'talknpc' command. Buys <quantity> of <item#> (<item#> is the
  number shown in the 'store' list). Use after "b", e.g. "b b2,100".
- Cleanup of redundant functions.pl $map_string variable.
- Store lookID instead of itemID internally for other players' headgear.
  http://openkore.sourceforge.net/forum/viewtopic.php?p=51034
  Fixes "Unknown 140" bug; improves detection of custom headgears.
- All players and monsters (members of %monsters and %players) are now
  objects. See Monster.pm and Player.pm for available methods, both of
  which inherit Actor.pm. Also You.pm and Unknown.pm.
- New Actor::get($ID) function is sort of like
  $ID eq $accountID ? $char : ($monsters{$ID} || $players{$ID})
- Network::Send::sendMove() redundant $r_socket first argument removed.
- New functions Commands::register() and Commands::unregister() for easy
  registration of new commands in plugins.
- Store $guild{member}[$c]{charID}.
- Get rid of useless %chars_old.
- The old $actor->name was renamed to $actor->nameString (but just